<resources>
    <string name="app_name">Doch1</string>
    <string name="last_press_time">lastPressTime</string>
    <!--<string name="main_status">mainStatus</string>-->
    <!--<string name="sub_status">subStatus</string>-->
    <!--<string name="soldier_name">soldierName</string>-->
    <string name="invalid_email_address">That email address isn\'t correct</string>
    <string name="missing_email_address">Enter your email address to continue</string>
    <string name="password_length">Strong passwords have at least %1$d characters and a mix of letters and numbers</string>
    <string name="invalid_sigin">Invalid email or password, try again ...</string>
    <string name="missing_data_string">this field cannot be blank</string>


    <!-- Sample menu -->
    <string name="action_settings">Settings</string>

    <!-- Drawer Items -->
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="profile_fragment">My Profile</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="main_fragment">Fill Statuses</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="dsc_main_statuses">fill your soldiers statuses</string>
    <string name="send_statuses">Send</string>

    <string name="no_display_name">No Display name</string>
    <string name="temp_file_image">file:///sdcard/temp.jpg</string>
    <string name="edit_email_reauthenticate_message">Editing email address requires re-authentication by entering your password.</string>
    <string name="morad_phone_number">0504866816</string>
    <string name="user">user</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="missing_phone_number">Enter phone  number</string>
    <string name="no_status">Status not yet entered</string>
    <string name="managment_fragment">Manage Groups</string>
    <string name="main_fragment_title">Filling Statuses</string>
    <string name="managmen_fragment_title">Manage groups</string>
    <string name="main_status">mainStatus</string>
    <string name="top_left_status">topLeftStatus</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Wait while loading...</string>
    <string name="noSubStatusMessage">no sub statuses</string>
    <string name="pick_image_intent_text">Something to write</string>
    <string name="my_members">My Members</string>
    <string name="select_group_message">Select Group...</string>
    <string name="my_groups">My Groups</string>
    <string name="show_sub_members">Show sub members</string>
    <string name="group">group</string>
    <string name="login_user">loginUser</string>
    <string name="is_show_sub_members">isShowSubMembers</string>
    <string name="add_group">Add Group</string>
    <string name="is_from_cluster">isFromCluster</string>
    <string name="image_member_index">memberImageIndex</string>
    <string name="repesented_by_cluster_layout">repesentedByClusterLayout</string>
    <string name="choose_sub_status">בחר סטטוס משנה</string>
    <string name="sub_status">סטטוס משנה:</string>
    <string name="no_sub_status">אין סטטוס משנה</string>
    <string name="this_is_member">thisIsMember</string>
    <string name="rate_us">Rate Doch1</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="not_parent_group">Not parent group</string>
</resources>
