<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="t.a.m.com.doch1.profile.ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/background_gray">

        <t.a.m.com.doch1.views.MyImageInputLayout
            android:id="@+id/profile_image"
            app:editable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </t.a.m.com.doch1.views.MyImageInputLayout>

        <t.a.m.com.doch1.views.MyTextInputLayout
            android:layout_marginTop="36dp"
            android:id="@+id/profile_name"
            app:title="Name"
            app:editable="true"
            app:on_empty_message="@string/missing_data_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </t.a.m.com.doch1.views.MyTextInputLayout>

        <t.a.m.com.doch1.views.MyTextInputLayout
            android:layout_marginTop="36dp"
            android:id="@+id/profile_email"
            app:title="Email"
            app:editable="true"
            app:on_empty_message="@string/missing_email_address"
            app:on_error_message="@string/invalid_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </t.a.m.com.doch1.views.MyTextInputLayout>

        <t.a.m.com.doch1.views.MyTextInputLayout
            android:layout_marginTop="36dp"
            android:id="@+id/profile_phone"
            app:title="Phone"
            app:editable="true"
            app:on_empty_message="@string/missing_phone_number"
            app:on_error_message="@string/invalid_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </t.a.m.com.doch1.views.MyTextInputLayout>
    </LinearLayout>
</ScrollView>
